fixati problemi di paese/regione, aggiunta opzione timeshift
+ aggiunte news in inglese e la possibilità di vedere la guida TV di un canale geobloccato

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -845,9 +845,6 @@ iframe {
     flex-direction: column-reverse;
     bottom: 0;
 }
-#news.news-not-loaded .tooltip-content-box:after {
-    content: "Caricamento...";
-}
 #news-list {
     width: 100%;
     text-align: left;
